Updates all pages

--- a/services/web-application-penetration-testing/index.html
+++ b/services/web-application-penetration-testing/index.html
@@ -371,7 +371,6 @@
                         <div class="bg-cyber-dark border border-cyber-accent/30 p-8 reveal flex flex-col">
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">Black-Box Pentest</h3>
-                                <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€4,000</div>
                                 <p class="text-cyber-light/60 text-sm">5 days of external testing</p>
                             </div>
 
@@ -399,7 +398,6 @@
 
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">Gray-Box Pentest</h3>
-                                <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€6,000</div>
                                 <p class="text-cyber-light/60 text-sm">6-7 days of hybrid testing</p>
                             </div>
 
@@ -423,7 +421,6 @@
                         <div class="bg-cyber-dark border border-cyber-accent/30 p-8 reveal flex flex-col" style="transition-delay: 200ms;">
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">White-Box Pentest</h3>
-                                <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€9,000</div>
                                 <p class="text-cyber-light/60 text-sm">8-10 days of deep analysis</p>
                             </div>
 
@@ -456,7 +453,7 @@
 
                     <div class="mt-12 text-center reveal" style="transition-delay: 400ms;">
                         <p class="text-cyber-light/80 max-w-2xl mx-auto">
-                            Looking for ongoing protection? Check out our <a href="/services/continuous-security-monitoring/" class="text-cyber-accent hover:underline font-medium">Continuous Security Monitoring</a> starting at €4,800/year.
+                            Looking for ongoing protection? Check out our <a href="/services/continuous-security-monitoring/" class="text-cyber-accent hover:underline font-medium">Continuous Security Monitoring</a>.
                         </p>
                     </div>
                 </div>
