--- a/services/continuous-security-monitoring/index.html
+++ b/services/continuous-security-monitoring/index.html
@@ -356,8 +356,7 @@
 
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">Standard Monitoring</h3>
-                                <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€2,000<span class="text-xl text-cyber-light/60">/year</span></div>
-                                <p class="text-cyber-light/60 text-sm">€500 quarterly - Comprehensive protection</p>
+                                <p class="text-cyber-light/60 text-sm">Comprehensive protection</p>
                             </div>
 
                             <ul class="space-y-3 mb-8 flex-grow">
@@ -382,8 +381,7 @@
                         <div class="bg-cyber-dark border border-cyber-accent/30 p-8 reveal flex flex-col relative" style="transition-delay: 100ms;">
                             <div class="text-center mb-6">
                                 <h3 class="font-display text-2xl font-bold text-white mb-2">Premium Monitoring</h3>
-                                <div class="font-mono text-4xl font-bold text-cyber-accent mb-2">€4,000<span class="text-xl text-cyber-light/60">/year</span></div>
-                                <p class="text-cyber-light/60 text-sm">€1,000 quarterly - Maximum coverage</p>
+                                <p class="text-cyber-light/60 text-sm">Maximum coverage</p>
                             </div>
 
                             <ul class="space-y-3 mb-8 flex-grow">
